--- a/tmux.conf
+++ b/tmux.conf
@@ -16,8 +16,9 @@ set -s escape-time 10                     # faster command sequences
 set -sg repeat-time 600                   # increase repeat timeout
 set -s focus-events on
 
-set -g prefix2 C-x                        # GNU-Screen compatible prefix
-bind C-x send-prefix -2
+unbind C-b
+set -g prefix C-x
+bind C-x send-prefix
 
 set -q -g status-utf8 on                  # expect UTF-8 (tmux < 2.2)
 setw -q -g utf8 on
