--- a/tmux.conf
+++ b/tmux.conf
@@ -26,7 +26,7 @@ setw -q -g utf8 on
 set -g history-limit 5000                 # boost history
 
 # edit configuration
-bind e new-window -n "~/.config/tmux/tmux.conf.local" "sh -c '\${EDITOR:-vim} ~/.config/tmux/tmux.conf.local && tmux source ~/.config/tmux.conf && tmux display \"~/.config/tmux.conf sourced\"'"
+bind e new-window -n "~/.config/tmux/tmux.conf.local" "sh -c '\${EDITOR:-nvim} ~/.config/tmux/tmux.conf.local && tmux source ~/.config/tmux.conf && tmux display \"~/.config/tmux.conf sourced\"'"
 
 # reload configuration
 bind r source-file ~/.config/tmux.conf \; display '~/.config/tmux.conf sourced'
