--- a/tmux.conf
+++ b/tmux.conf
@@ -107,23 +107,25 @@ bind P choose-buffer # choose which buffer to paste from
 
 
 # -- status line -------------------------------------------------------------------
-set -g @dracula-show-battery false
-set -g @dracula-show-network false
-set -g @dracula-show-weather false
-set -g @dracula-show-time true
-set -g @dracula-show-location false
-set -g @dracula-show-fahrenheit false
-set -g @dracula-show-powerline true
-# set -g @dracula-show-left-sep |
-set -g @dracula-show-flags true
-set -g @dracula-refresh-rate 5
-set -g @dracula-military-time true
-set -g @dracula-show-timezone false
-set -g @dracula-border-contrast true
-set -g @dracula-cpu-usage true
-set -g @dracula-ram-usage true
-set -g @dracula-gpu-usage false
-set -g @dracula-day-month false
+
+# tmux-prefix-highlight
+set -g @prefix_highlight_prefix_prompt ''
+set -g @prefix_highlight_copy_prompt ''
+set -g @prefix_highlight_sync_prompt '痢'
+set -g @prefix_highlight_show_copy_mode 'on'
+set -g @prefix_highlight_show_sync_mode 'on'
+set -g @prefix_highlight_copy_mode_attr 'fg=colour121,bg=colour234,bold'
+set -g @prefix_highlight_sync_mode_attr 'fg=colour121,bg=colour234,bold'
+set -g @prefix_highlight_fg 'colour121'
+set -g @prefix_highlight_bg 'colour234'
+
+set -g status "on"
+set -g status-interval 1
+set -g status-position top
+set -g status-left "#[fg=colour232,bg=colour154] 类#S "
+set -g status-right "#{prefix_highlight} #[fg=colour121,bg=colour238] %A %m-%d %H:%M:%S #[fg=colour232,bg=colour65] CPU: #{cpu_percentage} MEM: #{ram_percentage} "
+setw -g window-status-format "#[fg=colour121,bg=colour238] #I #W "
+setw -g window-status-current-format "#[fg=colour232,bg=colour33] #I #W "
 
 
 # -- plugins -------------------------------------------------------------------
@@ -131,7 +133,8 @@ set -g @dracula-day-month false
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
-set -g @plugin 'dracula/tmux'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-cpu'
 
 # install tpm
 if "test ! -d ~/.tmux/plugins/tpm" \
