--- a/tmux.conf
+++ b/tmux.conf
@@ -33,8 +33,6 @@ set -g set-titles on          # set terminal title
 set -g display-panes-time 800 # slightly longer pane indicators display time
 set -g display-time 1000      # slightly longer status messages display time
 
-set -g status-interval 10     # redraw status line every 10 seconds
-
 # clear both screen and history
 bind -n C-l send-keys C-l \; run 'sleep 0.1' \; clear-history
 
@@ -120,12 +118,14 @@ set -g @prefix_highlight_fg 'colour252'
 set -g @prefix_highlight_bg 'colour234'
 
 set -g status "on"
+set -g status-bg colour234
 set -g status-interval 1
 set -g status-position top
 set -g status-left "#[fg=colour236,bg=colour84] 类#S "
-set -g status-right "#{prefix_highlight} #[fg=colour236,bg=colour173] %A %m-%d %H:%M:%S #[fg=colour252,bg=colour63] CPU: #{cpu_percentage} MEM: #{ram_percentage} "
-setw -g window-status-format "#[fg=colour252,bg=colour63] #I #W "
-setw -g window-status-current-format "#[fg=colour252,bg=colour234] #I #W "
+set -g status-right-length 80
+set -g status-right "#{prefix_highlight} #[fg=colour236,bg=colour173] %A %m-%d %H:%M:%S #[fg=colour252,bg=colour63]#{?#{pane_ssh_connected}, #U@#H ,}"
+setw -g window-status-format "#[fg=colour252,bg=colour234] #I #W "
+setw -g window-status-current-format "#[fg=colour252,bg=colour63] #I #W "
 
 
 # -- plugins -------------------------------------------------------------------
@@ -134,7 +134,7 @@ setw -g window-status-current-format "#[fg=colour252,bg=colour234] #I #W "
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'soyuka/tmux-current-pane-hostname'
 
 # install tpm
 if "test ! -d ~/.tmux/plugins/tpm" \
