--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -10,15 +10,15 @@ scrolling:
 
 font:
   normal:
-    family: Hack Nerd Font
+    family: FiraCode Nerd Font
     style: Regular
 
   bold:
-    family: Hack Nerd Font
+    family: FiraCode Nerd Font
     style: Bold
 
   italic:
-    family: Hack Nerd Font
+    family: FiraCode Nerd Font
     style: Italic
 
   size: 18
