--- a/tmux.conf
+++ b/tmux.conf
@@ -132,6 +132,7 @@ setw -g window-status-current-format "#[fg=colour252,bg=colour63] #I #W "
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'soyuka/tmux-current-pane-hostname'
